--- a/views/index.ejs
+++ b/views/index.ejs
@@ -312,8 +312,13 @@
         </div>
     </div>
 
+    <!-- Featured Doctor Section -->
+    <%- include('partials/featuredDoctor') %>
+
+    <%- include('partials/blogPosts') %>
+
     <!-- Footer -->
-    <footer class="bg-blue-600 mt-16">
+    <footer class="mt-16" style="background-color: #4338ca;">
         <div class="mx-auto max-w-7xl px-6 py-12 md:flex md:items-center md:justify-between lg:px-8">
             <div class="flex justify-center space-x-6 md:order-2">
                 <a href="/impressum" class="text-white hover:text-gray-100 transition-all duration-200 ease-in-out">Impressum</a>
